# cursed-kit

./: .gitignore  .moonignore  Cargo.toml  README.md  dev.sh  package-lock.json  package.json
.github/workflows/: CI_SETUP.md  build-binaries.yml  deploy.yaml  docker-publish.yml
.moon/: project.yml  toolchain.yml  workspace.yml
cursed-egui/: Cargo.toml  deploy.sh  index.html
cursed-egui/assets/: single_field.csv
cursed-egui/src/: app.rs  core.rs  lib.rs  main.rs  web.rs
cursed-egui/src/widgets/: mod.rs  plot.rs
cursed-proto/: cursed.proto
cursed-server/: Cargo.toml  build.rs
cursed-server/data/: test.csv
cursed-server/src/: datastore.rs  live_sync.rs  main.rs
cursed-web/: index.html  package-lock.json  package.json  vite.config.js
cursed-web/public/: cursed-egui_bg.wasm
cursed-web/src/: App.css  App.jsx  Egui.css  EguiView.jsx  PlotlyView.jsx  VideoView.jsx  cursed-egui.js  index.css  main.jsx
cursed-web/src/cursed-grpc-gen/: CursedServiceClientPb.ts  cursed_pb.d.ts  cursed_pb.js  package-lock.json
cursed-ws/: README.md  docker-compose.dev.yml  docker-compose.yml
cursed-ws/cursed-ws-bridge/: Cargo.toml  Dockerfile  README.md  moon.yml  package.json
cursed-ws/cursed-ws-bridge/src/: datapoint.rs  main.rs  state.rs  test_data.rs  ws_handler.rs
cursed-ws/cursed-ws-web/: README.md  index.html  moon.yml  nginx.conf  package-lock.json  package.json  vite.config.js
cusred-grpc-egui/cursed-proto/: cursed.proto
cusred-grpc-egui/cursed-web/: index.html  package-lock.json  vite.config.js  vite.config.js.timestamp-1721271355442-04007d2f47a54.mjs
(+28 files in other folders)
